--- a/.github/workflows/build_transmission-daemon_base_workflow.yml
+++ b/.github/workflows/build_transmission-daemon_base_workflow.yml
@@ -1,11 +1,26 @@
 name: build transmission-daemon base workflow
 
 on:
-  workflow_call:
-        
+  push:
+    branches:
+      - master
+    paths:
+      - 'transmission-daemon/**'
+      - '.github/workflows/build-transmission-daemon.yml'
+  pull_request:
+    branches:
+      - master
+    paths:
+      - 'transmission-daemon/**'
+      - '.github/workflows/build-transmission-daemon.yml'
+  workflow_dispatch:
+
 jobs:
   build_transmission-daemon:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        arch: [amd64, arm64]
     env:
       working-directory: ./transmission-daemon
       TRANSMISSION_VERSION: 4.0.5
@@ -14,15 +29,17 @@ jobs:
         working-directory: ${{ env.working-directory }}
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4.1.6
 
       - name: Install buildah
         run: |
           sudo apt-get update
           sudo apt-get install -y buildah qemu-user-static
 
-      - name: Build the tranmission-daemon
-        run: build_tranmission-daemon.sh
+      - name: Build the transmission-daemon
+        run: |
+          chmod +x build_transmission-daemon.sh
+          ./build_transmission-daemon.sh ${{ matrix.arch }}
 
       - name: Install b2sum
         run: |
@@ -31,15 +48,15 @@ jobs:
 
       - name: Calculate b2sum
         run: |
-          b2sum out/* > out/transmission-daemon-${{ env.TRANSMISSION_VERSION }}.b2sum
-      
+          b2sum out/* > out/transmission-daemon-${{ env.TRANSMISSION_VERSION }}-${{ matrix.arch }}.b2sum
+
       - name: Make release transmission-daemon tarball
         run: |
-          /bin/tar clJf transmission-daemon-${{ env.TRANSMISSION_VERSION }}.tar.xz out/*
+          /bin/tar clJf transmission-daemon-${{ env.TRANSMISSION_VERSION }}-${{ matrix.arch }}.tar.xz out/*
 
       - name: Upload the transmission-daemon tarball
         uses: actions/upload-artifact@v3
         with:
-          name: transmission-daemon-${{ env.TRANSMISSION_VERSION }}.tar.xz
-          path: transmission-daemon-${{ env.TRANSMISSION_VERSION }}.tar.xz
+          name: transmission-daemon-${{ env.TRANSMISSION_VERSION }}-${{ matrix.arch }}.tar.xz
+          path: transmission-daemon-${{ env.TRANSMISSION_VERSION }}-${{ matrix.arch }}.tar.xz
           retention-days: 1
