--- a/.github/workflows/build_transmission-daemon_base_workflow.yml
+++ b/.github/workflows/build_transmission-daemon_base_workflow.yml
@@ -14,6 +14,7 @@ on:
       - 'transmission-daemon/**'
       - '.github/workflows/build_transmission-daemon_base_workflow.yml'
   workflow_dispatch:
+  workflow_call:
 
 jobs:
   build_transmission-daemon:
