Create release for each arch

--- a/.github/workflows/release_transmission-daemon_workflow.yml
+++ b/.github/workflows/release_transmission-daemon_workflow.yml
@@ -35,16 +35,16 @@ jobs:
         id: create_release
         run: |
           tag_name=$(echo "${GITHUB_REF#refs/tags/}")
-          body="Release notes for $tag_name"
+          body="Release notes for $tag_name - ${{ matrix.arch }}"
 
-          echo "Creating release $tag_name"
-          gh release create "$tag_name" "transmission-daemon-${{ env.TRANSMISSION_VERSION }}-${{ matrix.arch }}.tar.xz" --notes "$body"
+          echo "Creating release $tag_name-${{ matrix.arch }}"
+          gh release create "$tag_name-${{ matrix.arch }}" "transmission-daemon-${{ env.TRANSMISSION_VERSION }}-${{ matrix.arch }}.tar.xz" --notes "$body"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Verify Release
         run: |
-          release_id=$(gh release view "$tag_name" --json id -q ".id")
+          release_id=$(gh release view "$tag_name-${{ matrix.arch }}" --json id -q ".id")
           echo "Release ID: $release_id"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
